--- a/public/index.html
+++ b/public/index.html
@@ -109,6 +109,8 @@
             position: relative;
             overflow: hidden;
             animation: floatLogo 3s ease-in-out infinite;
+            left: 0;
+            right: 0;
         }
 
         @keyframes floatLogo {
@@ -120,7 +122,11 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
+            object-position: center center;
             border-radius: 50%;
+            display: block;
+        }{
+            text-align: center;
         }
 
         .logo h1 {
@@ -129,6 +135,9 @@
             font-weight: 900;
             margin-bottom: 25px;
             letter-spacing: 6px;
+            line-height: 1;
+            text-transform: uppercase;
+            text-align: center
             line-height: 1;
             text-transform: uppercase;
         }
@@ -167,6 +176,7 @@
             font-size: 24px;
             color: #2C5F7F;
             margin-bottom: 45px;
+            text-align: center;
             font-weight: 900;
             letter-spacing: 6px;
             text-transform: uppercase;
@@ -187,6 +197,7 @@
                 inset 0 2px 4px rgba(255,255,255,0.5),
                 inset 0 -2px 4px rgba(0,0,0,0.1),
                 0 4px 8px rgba(0,0,0,0.2);
+            text-align: center;
             max-width: 100%;
         }
 
@@ -207,6 +218,7 @@
             display: flex;
             flex-direction: column;
             gap: 25px;
+            align-items: center;
             margin: 0 auto 45px;
             max-width: 600px;
         }
@@ -247,6 +259,7 @@
         button span {
             position: relative;
             z-index: 1;
+            text-align: center;
             display: block;
             text-shadow: 2px 2px 0 rgba(0,0,0,0.2);
         }
@@ -335,6 +348,7 @@
             padding-left: 0;
             position: relative;
             font-size: 19px;
+            text-align: center;
             line-height: 1.8;
             font-weight: 700;
             max-width: 600px;
