--- a/public/register.html
+++ b/public/register.html
@@ -4,98 +4,147 @@
     <meta charset="UTF-8">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inscription - Jeu Bleu/Rouge</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Inscription - Bleu vs Rouge</title>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Bebas+Neue&family=Archivo+Black&display=swap" rel="stylesheet">
     <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        body {
+            font-family: 'Anton', sans-serif;
+            background: #4FA8A8;
+            background-image: 
+                repeating-linear-gradient(45deg, transparent, transparent 35px, rgba(255,255,255,.05) 35px, rgba(255,255,255,.05) 70px),
+                repeating-linear-gradient(-45deg, transparent, transparent 35px, rgba(0,0,0,.03) 35px, rgba(0,0,0,.03) 70px);
+            min-height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 20px;
+        }
         .auth-container {
-            max-width: 450px;
-            margin: 50px auto;
-            padding: 40px;
-            background: linear-gradient(145deg, #1a2035, #12172b);
+            max-width: 550px;
+            width: 100%;
+            padding: 50px;
+            background: #E8D5B7;
             border-radius: 20px;
-            box-shadow: 0 10px 40px rgba(0,0,0,0.4);
-            border: 2px solid rgba(0, 255, 85, 0.3);
+            box-shadow: 
+                0 0 0 8px #E8D5B7,
+                0 0 0 12px #2C5F7F,
+                0 0 0 16px #E8D5B7,
+                0 25px 50px rgba(0, 0, 0, 0.5);
+            border: 4px solid #2C5F7F;
+            text-align: center;
+        }
+        h1 {
+            font-family: 'Archivo Black', sans-serif;
+            font-size: 42px;
+            color: #2C5F7F;
+            text-transform: uppercase;
+            margin-bottom: 35px;
+            letter-spacing: 4px;
+            text-shadow: 3px 3px 0 rgba(44, 95, 127, 0.3);
         }
         .auth-form {
             display: flex;
             flex-direction: column;
-            gap: 20px;
+            gap: 22px;
         }
         .auth-input {
-            padding: 18px;
-            border: 3px solid rgba(255,255,255,0.2);
-            border-radius: 12px;
+            padding: 20px;
+            border: 4px solid #2C5F7F;
+            border-radius: 15px;
             font-size: 18px;
-            background: rgba(10, 14, 26, 0.8);
-            color: white;
+            background: rgba(255,255,255,0.7);
+            color: #2C3E50;
             transition: all 0.3s;
+            font-family: 'Anton', sans-serif;
+            font-weight: 600;
         }
         .auth-input:focus {
             outline: none;
-            border-color: #00ff55;
-            box-shadow: 0 0 20px rgba(0, 255, 85, 0.3);
+            border-color: #E74C3C;
+            box-shadow: 0 0 15px rgba(231, 76, 60, 0.4);
+            background: rgba(255,255,255,0.9);
         }
         .auth-input::placeholder {
-            color: rgba(255,255,255,0.5);
+            color: rgba(44,62,80,0.5);
         }
         .auth-button {
-            padding: 18px;
-            background: linear-gradient(135deg, #00aa44 0%, #00ff55 100%);
+            padding: 24px;
+            background: linear-gradient(180deg, #5DADE2 0%, #2C5F7F 100%);
             color: white;
-            border: none;
-            border-radius: 12px;
-            font-size: 20px;
+            border: 5px solid #2C3E50;
+            border-radius: 50px;
+            font-size: 26px;
             cursor: pointer;
-            font-weight: bold;
-            transition: all 0.3s;
+            font-weight: 900;
+            transition: all 0.2s;
             text-transform: uppercase;
-            letter-spacing: 1px;
+            letter-spacing: 3px;
+            font-family: 'Archivo Black', sans-serif;
+            box-shadow: 0 8px 0 #2C3E50, 0 12px 20px rgba(0,0,0,0.4);
         }
         .auth-button:hover {
             transform: translateY(-3px);
-            box-shadow: 0 10px 30px rgba(0, 255, 85, 0.5);
+            box-shadow: 0 11px 0 #2C3E50, 0 15px 25px rgba(0,0,0,0.5);
+        }
+        .auth-button:active {
+            transform: translateY(5px);
+            box-shadow: 0 3px 0 #2C3E50, 0 6px 12px rgba(0,0,0,0.3);
         }
         .auth-link {
             text-align: center;
-            margin-top: 20px;
+            margin-top: 30px;
+            font-size: 18px;
+            font-weight: 700;
         }
         .auth-link a {
-            color: #00d4ff;
+            color: #2C5F7F;
             text-decoration: none;
-            font-size: 18px;
-            font-weight: 500;
+            font-size: 20px;
+            font-weight: 900;
+            padding: 8px 15px;
+            border-radius: 8px;
+            transition: all 0.2s;
         }
         .auth-link a:hover {
-            text-decoration: underline;
+            background: #2C5F7F;
+            color: white;
+            transform: scale(1.1);
         }
         .error-message {
-            color: #ff6b6b;
-            padding: 15px;
-            background: rgba(255, 107, 107, 0.15);
-            border: 2px solid rgba(255, 107, 107, 0.3);
-            border-radius: 10px;
-            margin-bottom: 20px;
-            font-size: 16px;
+            color: #E74C3C;
+            padding: 18px;
+            background: rgba(231, 76, 60, 0.15);
+            border: 3px solid #E74C3C;
+            border-radius: 15px;
+            margin-bottom: 25px;
+            font-size: 17px;
+            font-weight: 700;
         }
         .skip-auth {
             text-align: center;
-            margin-top: 25px;
-            padding-top: 25px;
-            border-top: 2px solid rgba(255,255,255,0.1);
+            margin-top: 30px;
+            padding-top: 30px;
+            border-top: 3px double #2C5F7F;
         }
         .skip-auth a {
-            color: rgba(255,255,255,0.6);
+            color: rgba(44,95,127,0.7);
             text-decoration: none;
-            font-size: 16px;
+            font-size: 17px;
+            font-weight: 700;
         }
         .skip-auth a:hover {
-            color: white;
+            color: #2C5F7F;
         }
     </style>
 </head>
 <body>
     <div class="auth-container">
-        <h1 style="text-align: center; color: #00ff55; font-size: 2rem; margin-bottom: 30px;">✨ Créer un compte</h1>
+        <h1>✨ INSCRIPTION</h1>
         
         <div id="errorMessage" style="display: none;" class="error-message"></div>
         
