Simplification complète des polices: Arial remplace toutes les fancy fonts pour mobile (CSS + JSX)

--- a/public/index.html
+++ b/public/index.html
@@ -422,8 +422,8 @@
         </div>
 
         <div class="description">
-            <p><strong>🎯 OBJECTIF :</strong> Découvrez qui sont les traîtres infiltrés dans votre équipe avant qu'il ne soit trop tard !</p>
-            <p><strong>👥 JOUEURS :</strong> 4 minimum (8+ pour les traîtres)</p>
+            <p><strong>🎯 OBJECTIF :</strong> Soyez la dernière équipe debout ! Trahissez vos amis, démasquez les ennemis !</p>
+            <p><strong>👥 JOUEURS :</strong> 4 minimum pour commencer</p>
             <p><strong>⏱️ DURÉE :</strong> De 20 minutes à 10 jours</p>
         </div>
 
@@ -437,13 +437,15 @@
         </div>
 
         <div class="rules">
-            <h3>📋 COMMENT JOUER ?</h3>
+            <h3>📋 RÈGLES DU JEU</h3>
             <ul>
-                <li><strong>Deux équipes :</strong> Bleus contre Rouges</li>
-                <li><strong>Traîtres cachés :</strong> Certains joueurs infiltrent l'équipe adverse</li>
-                <li><strong>Votes réguliers :</strong> Éliminez les suspects à chaque tour</li>
-                <li><strong>Chat anonyme :</strong> Discutez sans révéler votre identité</li>
-                <li><strong>Gagnez :</strong> Éliminez tous les adversaires ou démasquez les traîtres</li>
+                <li><strong>3 Équipes :</strong> Bleus, Rouges et Traîtres infiltrés</li>
+                <li><strong>Double identité :</strong> Nom réel + Pseudo anonyme (ex: Joueur 56)</li>
+                <li><strong>Votes réguliers :</strong> Chaque équipe élimine un joueur suspect à chaque tour</li>
+                <li><strong>Représentant élu :</strong> Après le 1er vote, protégé des tueurs mais pas des votes</li>
+                <li><strong>Rôles spéciaux :</strong> Tueurs, Détecteurs, Boulanger, Hacker et bien plus...</li>
+                <li><strong>Chat anonyme :</strong> Discutez uniquement avec vos pseudos</li>
+                <li><strong>Victoire :</strong> Dernière équipe survivante ou objectif spécial (Amoureux, Traîtres)</li>
             </ul>
         </div>
 
