--- a/client/index.html
+++ b/client/index.html
@@ -3,9 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Blue vs Red Game | Jeu Bleu vs Rouge</title>
+    <link rel="icon" type="image/png" href="/logo-bvr.png" />
+    <link rel="apple-touch-icon" href="/logo-bvr.png" />
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-title" content="Bleu vs Rouge" />
+    <meta name="theme-color" content="#4FA8A8" />
+    <meta name="description" content="Jeu de déduction sociale Bleu vs Rouge - Infiltration, traîtres et élimination" />
+    <title>Jeu Bleu vs Rouge</title>
   </head>
   <body>
     <div id="root"></div>
